Fix Description Wrapping

--- a/ProjectEulerWebApp-Frontend/src/app/component/smart/euler-problems/euler-problem/euler-problem.component.scss
+++ b/ProjectEulerWebApp-Frontend/src/app/component/smart/euler-problems/euler-problem/euler-problem.component.scss
@@ -7,7 +7,6 @@ h2 {
 }
 
 .description, .description ::slotted(*), tt {
-  white-space: pre-wrap !important;
   font-size: large !important;
   font-family: inherit !important;
 }
